handle getlast java compiler error :D